--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
 <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
 <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
-<p>Total Raised To Date: $<%= @project.pledges.map { |pledge| pledge.dollar_amount }.sum %></p>
+<p>Total Raised To Date: $<%= dollars_2dp(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
 
 <%= form_for [@project, Pledge.new] do |f| %>
   <%= f.number_field :dollar_amount, value: @project.rewards.minimum(:dollar_amount), step: 0.01 %>
