Add owners update link to project show page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @project.title %></h1>
+<% if @project.user == current_user %>
+<%= link_to "Add Update"%>
+<% end %>
 
 <% if @project.image.present? %>
   <%= image_tag @project.image %>
@@ -8,7 +11,7 @@
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
 <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
 <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
-<time class="project-days-left">
+<time>
   <%= icon('clock-o') %>
   <%= "#{time_ago_in_words(@project.end_date)} #{( @project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
 <p>Total Raised To Date: $<%= dollars_2dp(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
