--- a/app/views/rewards/new.html.erb
+++ b/app/views/rewards/new.html.erb
@@ -11,5 +11,10 @@
     <%= f.text_area :description %>
   </div>
 
+  <div>
+    <%= f.label :limit %> (Optional) 
+    <%= f.number_field :limit %>
+  </div>
+
   <%= f.submit %>
 <% end %>
