--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -25,6 +25,9 @@
 <% @project.rewards.each do |reward| %>
   <p><%= number_to_currency(reward.dollar_amount) %></p>
   <p><%= reward.description %></p>
+  <% if reward.limit %>
+    <p>Only <%= reward.limit %> available in total</p>
+  <% end %>
 
   <p>
     <small>
