Change formatting of no claim limit text on project show view

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -32,7 +32,7 @@
   <% if reward.limit %>
     | Total available: <%= reward.limit %></p>
   <% else %>
-    <p>No limits have been set for this reward.</p>
+    | No limits have been set for this reward.</p>
   <% end %>
 
   <p>
