--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,10 +23,10 @@
 
 <h2>Rewards</h2>
 <% @project.rewards.each do |reward| %>
-  <p>Pledge <%= number_to_currency(reward.dollar_amount) %> or more</p>
+  <p>Pledge <%= number_to_currency(reward.dollar_amount) %></p>
   <p><%= reward.description %></p>
   <%= form_tag(claim_project_reward_path(@project, reward), method: "patch") do %>
-    <%= submit_tag("Claim this Reward") %>
+    <%= submit_tag("Pledge and Claim this Reward") %>
   <% end %>
   <p>Claimed: <%= reward.claimed %>
   <% if reward.limit %>
