Fix links to New Update page and fix typos in the forms

--- a/app/views/project_updates/new.html.erb
+++ b/app/views/project_updates/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Create an Update</h1>
 
-<%= render "form", :project @project :project_update: @update %>
+<%= render "form", project: @project, project_update: @update %>
