--- a/app/views/project_updates/_form.html.erb
+++ b/app/views/project_updates/_form.html.erb
@@ -1,11 +1,16 @@
-<%= form_for (project, project_update) do |f| %>
-
-  <%= f.lable :title %>
+<%= form_for([project, project_update]) do |f| %>
+<p>
+  <%= f.label :title %>
   <%= f.text_field :title %>
+</p>
 
+<p>
   <%= f.label :description %>
   <%= f.text_area :description %>
+</p>
 
+<p>
   <%= submit_tag %>
+</p>
 
 <% end %>
