--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @project.title %></h1>
 <% if @project.user == current_user %>
-<%= link_to "Add Update"%>
+<%= link_to "Add Update", new_project_project_update_path(@project)%>
 <% end %>
 
 <% if @project.image.present? %>
