--- a/app/views/project_updates/new.html.erb
+++ b/app/views/project_updates/new.html.erb
@@ -1,3 +1,4 @@
 <h1>Create an Update</h1>
+<%= link_to "Back to #{@project.title}", project_path(@project) %>
 
 <%= render "form", project: @project, project_update: @update %>
