--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,10 +14,10 @@
 <time>
   <%= icon('clock-o') %>
   <%= "#{time_ago_in_words(@project.end_date)} #{( @project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
-<p>Total Raised To Date: $<%= dollars_2dp(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
+<p>Total Raised To Date: <%= number_to_currency(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
 
 <%= form_for [@project, Pledge.new] do |f| %>
-  <%= f.number_field :dollar_amount, value: @project.rewards.minimum(:dollar_amount), step: 0.01 %>
+  <%= f.number_field :dollar_amount, value: dollars_2dp(@project.rewards.minimum(:dollar_amount)), step: 0.01 %>
   <%= f.submit "Pledge" %>
 <% end %>
 
