Display the projects that a user has backed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <h1>Hi <%= current_user.first_name %></h1>
+
+<% @backed_projects.each do |backed_project| %>
+<h2><%= backed_project.title %></h2>
+<% end %>
