--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,9 @@
 
 <% @backed_projects.each do |backed_project| %>
 <h2><%= backed_project.title %></h2>
+<% current_user.pledges.where(project: backed_project).each do |pledge| %>
+<ul>
+  <li><%= number_to_currency(pledge.dollar_amount) %></li>
+</ul>
+<% end %>
 <% end %>
