--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,6 +6,15 @@
 <% if @project.image.present? %>
   <%= image_tag @project.image %>
 <% end %>
+<ul>
+  <% @updates.each do |update| %>
+    <li><%= update.title %><br />
+      <%= update.description %><br />
+      Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %><br />
+      <%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %>
+    </li>
+  <% end %>
+</ul>
 
 <p><%= @project.description %></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
