--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <h1 class="logo">Crowdfunder</h1>
 
       <nav class="site-nav">
+          <%= link_to "Home", root_url %>
         <% if current_user %>
           <%= link_to "Logout", :logout, method: :delete %>
         <% else %>
