Display the total that a person has funded on their profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,14 @@
 <h1>Hi <%= current_user.first_name %></h1>
+<p>You have backed a total of <%= number_to_currency(current_user.pledges.map {|pledge| pledge.dollar_amount}.sum) %> on Crowfunder!</p>
 
 
 <h2>My Projects</h2>
 <% current_user.projects.each do |project| %>
   <h3><%= project.title %></h3>
+  <time>
+    <%= icon('clock-o') %>
+    <%= "#{time_ago_in_words(project.end_date)} #{( project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
+  <p>Total Raised To Date: <%= number_to_currency(project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
 <% end %>
 
 <h2>Backed Projects</h2>
