--- a/app/views/project_updates/edit.html.erb
+++ b/app/views/project_updates/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Edit Update</h1>
 <%= link_to "Back to #{@project.title}", project_path(@project) %>
 
-<%= render "form", project: @project, :project_update: @update %>
+<%= render "form", project: @project, project_update: @update %>
