--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,16 @@
       <h1 class="logo">Crowdfunder</h1>
 
       <nav class="site-nav">
-          <%= link_to "Home", root_url %>
+        <%= link_to "Home", root_url %>
+
+        <%= form_tag(projects_path, method: "get") do %>
+          <%= label_tag(:search, params[:search], placeholder: "Search for a project") %>
+          <%= text_field_tag(:search) %>
+          <%= submit_tag("Search") %>
+        <% end %>
+
         <% if current_user %>
-          <%= link_to "Logout", :logout, method: :delete %>
+          <%= link_to "Logout", :logout, method: :delete %> |
           <%= link_to "Your Profile", user_path(current_user) %>
         <% else %>
           <%= link_to "Register", new_user_path %> |
