--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,12 @@
-<%= link_to "New Project", new_project_path %>
+<p><%= Project.all.count %> projects have been started</p>
+<p><%= @successful_projects.count %> projects have been funded</p>
+<p>$<%= @successful_projects.map {|project| project.pledges.map{|p|p.dollar_amount}.sum}.sum %> have been pledged towards successful projects</p>
+
+
+
+
+
+<p><%= link_to "New Project", new_project_path %></p>
 
 <% @projects.each do |project| %>
   <article class="project">
