Create route for search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <nav class="site-nav">
         <%= link_to "Home", root_url %>
 
-        <%= form_tag(projects_path, method: "get") do %>
+        <%= form_tag("/seach", method: "get") do %>
           <%= label_tag(:search, params[:search], placeholder: "Search for a project") %>
           <%= text_field_tag(:search) %>
           <%= submit_tag("Search") %>
