Display updates that happened before project was completed to non-backers

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,30 +12,7 @@
   <%= "#{time_ago_in_words(@project.end_date)} #{( @project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
   <p>Total Raised To Date: <%= number_to_currency(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
 
-  <h2>Updates</h2>
-
-<% if @project.user == current_user %>
-<%= link_to "Add Update", new_project_project_update_path(@project)%>
-<% end %>
-
-<% if current_user.pledged_projects == @project %>
-<ul>
-  <% @pledger_updates.each do |update| %>
-  <li><%= update.title %><br />
-    <%= update.description %><br />
-    Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %><br />
-    <% if current_user == @project.user %>
-    <%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %>
-    <% end %>
-  </li>
-  <% end %>
-</ul>
-<% end %>
-
-
-
-
-<% unless current_user == @project.user %>
+  <% unless current_user == @project.user %>
   <% if !current_user || current_user.pledges.where(project_id: @project.id).empty? %>
   <h2>Enter an amount to pledge below!</h2>
   <% else %>
@@ -43,6 +20,38 @@
   <p>You have already contributed to this cause. To pledge again, enter an amount below.</p>
   <% end %>
   <%= render '/pledges/form', pledge: @pledge %>
+  <% end %>
+
+  <h2>Updates</h2>
+
+<% if @project.user == current_user %>
+<%= link_to "Add Update", new_project_project_update_path(@project)%>
+<% end %>
+
+<% if current_user.pledged_projects == @project %>
+  <ul>
+    <% @pledger_updates.each do |update| %>
+      <li><%= update.title %><br />
+        <%= update.description %><br />
+        Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %><br />
+        <% if current_user == @project.user %>
+        <%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <ul>
+    <% @updates.each do |update| %>
+    <li><%= update.title %><br />
+      <%= update.description %><br />
+      Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %><br />
+      <% if current_user == @project.user %>
+      <%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %>
+      <% end %>
+    </li>
+    <% end %>
+  </ul>
 <% end %>
 
 
