--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,6 +2,7 @@
   <%= image_tag @project.image %>
 <% end %>
 <h1><%= @project.title %></h1>
+<h4>By <%= @project.user.first_name %> <%= @project.user.last_name %></h4>
 
 <p><%= @project.description %></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
