--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,8 @@
   <%= image_tag @project.image %>
 <% end %>
 <h1><%= @project.title %></h1>
-<h4>By <%= @project.user.first_name %> <%= @project.user.last_name %></h4>
+<h4>By
+  <%= link_to "#{@project.user.first_name} #{@project.user.last_name}", project_owner_path(@project.id, @project.user.id) %></h4>
 
 <p><%= @project.description %></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
