Set search with empty results to return empty array

--- a/app/views/projects/search.html.erb
+++ b/app/views/projects/search.html.erb
@@ -1,6 +1,6 @@
 <h1>Search Results</h1>
 
-<% if @projects == nil%>
+<% if @projects == []%>
 <p>Nothing matches your search</p>
 <% else %>
   <% @projects.each do |project| %>
