--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,7 +9,7 @@
 
 <% if @project.tags.present? %>
   <% @project.tags.each do |tag| %>
-    <p><%= tag.name %></p>
+    <p><%= link_to tag.name, search_path(search: "#{tag.name}", commit: "Search") %></p>
   <% end %>
 <% end %>
 
