--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -64,7 +64,7 @@
   </ul>
 <% end %>
 
-<h2>Comments</h2>
+<h2>Comments by Backers</h2>
 <% if @project.project_comments.any? %>
   <ul>
     <% @project.project_comments.each do |project_comment| %>
@@ -72,7 +72,11 @@
         <li>
           <p><%= project_comment.user.first_name %> said:</p>
           <p><%= project_comment.comment %></p>
-          <p>Created at <%= dateformat(project_comment.created_at) %></p>
+          <p>Created at <%= dateformat(project_comment.created_at) %>
+          <% if current_user == project_comment.user %>
+            | <%= link_to("Delete", project_project_comment_path(@project, project_comment), method: :delete, data: { confirm: "Are you sure you want to delete your comment?"}) %>
+          <% end %>
+          </p>
         </li>
       <% end %>
     <% end %>
@@ -92,7 +96,6 @@
       <%= f.submit "Submit Comment" %>
     </div>
   <% end %>
-
 <% end %>
 
 
