Add name and links to the footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,26 @@
     </main>
 
     <footer class="site-footer">
-      <small>A Bitmaker assignment</small>
+      <h2>A Bitmaker Assignment Made By:</h2>
+      <section class="contributors">
+        <div class="col">
+          <h3>ABBY CHRISTENS</h3>
+          <%= link_to image_tag("GitHub-Mark-Light-32px"), "https://github.com/achristens", :target => "_blank" %> <%= link_to image_tag("In-White-34px-R"), "https://www.linkedin.com/in/abigail-christens-8898bb30/" %>
+        </div>
+        <div class="col">
+          <h3>CECILIA WONG</h3>
+          <%= link_to image_tag("GitHub-Mark-Light-32px"), "https://github.com/cece24", :target => "_blank" %> <%= link_to image_tag("In-White-34px-R"), "https://www.linkedin.com/in/cecilia-wong-1bb11173/" %>
+        </div>
+        <div class="col">
+          <h3>DEMI LEE</h3>
+          <%= link_to image_tag("GitHub-Mark-Light-32px"), "https://github.com/demileee", :target => "_blank" %> <%= link_to image_tag("In-White-34px-R"), "https://www.linkedin.com/in/demi-lee/" %>
+        </div>
+        <div class="col">
+          <h3>JOSH DALES</h3>
+          <%= link_to image_tag("GitHub-Mark-Light-32px"), "https://github.com/joshdales", :target => "_blank" %> <%= link_to image_tag("In-White-34px-R"), "https://www.linkedin.com/in/josh-dales-developer/" %>
+        </div>
+      </section>
     </footer>
+
   </body>
 </html>
