--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -33,7 +33,7 @@
     display: grid;
     grid-template-columns: repeat(6, 6fr);
     grid-gap: 0.7rem;
-    .project-and-updates {
+    .updates-and-comments {
       grid-column: 0 / 5;
     }
 
@@ -43,5 +43,5 @@
       overflow: scroll;
     }
   }
-  
+
 }
