Set updates and rewards to have a default size and both parts have scroll overflow.

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -33,13 +33,14 @@
     display: grid;
     grid-template-columns: repeat(6, 6fr);
     grid-gap: 0.7rem;
+    height: 500px;
     .updates-and-comments {
-      grid-column: 0 / 5;
+      grid-column: 1 / 5;
+      overflow: scroll;
     }
 
     .project-rewards {
       grid-column: 5 / 7;
-      height: 300px;
       overflow: scroll;
     }
   }
