--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,36 +1,39 @@
-<% if @project.image.present? %>
+<section class="project-header">
+  <% if @project.image.present? %>
   <%= image_tag @project.image %>
-<% end %>
-
-<h1><%= @project.title %></h1>
-
-<h4>By
-  <%= link_to "#{@project.user.first_name} #{@project.user.last_name}", project_owner_path(@project.id, @project.user.id) %></h4>
-
-<% if @project.tags.present? %>
-  <% @project.tags.each do |tag| %>
-    <p><%= link_to tag.name, search_path(search: "#{tag.name}", commit: "Search") %></p>
   <% end %>
-<% end %>
 
-<p><%= @project.description %></p>
-<p>Goal: <%= number_to_currency(@project.goal) %></p>
-<p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
-<p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
-<time>
-  <%= icon('clock-o') %>
-  <%= "#{time_ago_in_words(@project.end_date)} #{( @project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
+  <h1><%= @project.title %></h1>
+
+  <h4>By
+    <%= link_to "#{@project.user.first_name} #{@project.user.last_name}", project_owner_path(@project.id, @project.user.id) %></h4>
+
+  <% if @project.tags.present? %>
+    <% @project.tags.each do |tag| %>
+      <p><%= link_to tag.name, search_path(search: "#{tag.name}", commit: "Search") %></p>
+    <% end %>
+  <% end %>
+
+  <p><%= @project.description %></p>
+  <p>Goal: <%= number_to_currency(@project.goal) %></p>
+  <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
+  <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
+  <time>
+    <%= icon('clock-o') %>
+    <%= "#{time_ago_in_words(@project.end_date)} #{( @project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %>
+  </time>
   <p>Total Raised To Date: <%= number_to_currency(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
 
   <% unless current_user == @project.user %>
-  <% if !current_user || current_user.pledges.where(project_id: @project.id).empty? %>
-  <h2>Enter an amount to pledge below!</h2>
-  <% else %>
-  <h2>Hello, <%= current_user.first_name %>!</h2>
-  <p>You have already contributed to this cause. To pledge again, enter an amount below.</p>
+    <% if !current_user || current_user.pledges.where(project_id: @project.id).empty? %>
+      <h2>Enter an amount to pledge below!</h2>
+    <% else %>
+      <h2>Hello, <%= current_user.first_name %>!</h2>
+      <p>You have already contributed to this cause. To pledge again, enter an amount below.</p>
+    <% end %>
+    <%= render '/pledges/form', pledge: @pledge %>
   <% end %>
-  <%= render '/pledges/form', pledge: @pledge %>
-  <% end %>
+</section>
 <hr>
 
 <section class="main-content">
