--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -31,16 +31,29 @@
 @media ( min-width: 1024px ) {
   .project-header {
     display: grid;
-    grid-template-columns: repeat(6, 6fr);
-    grid-template-rows: repeat(3, 3fr);
+    grid-template-columns: repeat(7, 6fr);
+    grid-template-rows: repeat(10, 60px);
     grid-area: 1 / 1 / 10 / 10;
     h1 {
       grid-column: 2;
-      grid-row: 1;
+      grid-row: 2;
+      display: block;
     }
     h4 {
       grid-column: 1;
-      grid-row: 1;
+      grid-row: 2;
+    }
+    img {
+      grid-column: 2 / 5;
+      grid-row: 5 / 10;
+    }
+    .description {
+      grid-column: 2 / 6;
+      grid-row: 3;
+    }
+    .goal-details {
+      grid-column: 6 / 8;
+      grid-row: 5 / 10;
     }
   }
 
