--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,8 @@
 <section class="project-header">
   <% if @project.image.present? %>
-  <%= image_tag @project.image %>
+    <%= image_tag @project.image %>
+  <% else %>
+    <%= image_tag ActionController::Base.helpers.asset_path("default.jpg") %>
   <% end %>
 
   <h1><%= @project.title %></h1>
@@ -14,25 +16,27 @@
     <% end %>
   <% end %>
 
-  <p><%= @project.description %></p>
-  <p>Goal: <%= number_to_currency(@project.goal) %></p>
-  <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
-  <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
-  <time>
-    <%= icon('clock-o') %>
-    <%= "#{time_ago_in_words(@project.end_date)} #{( @project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %>
-  </time>
-  <p>Total Raised To Date: <%= number_to_currency(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
+  <p class="description"><%= @project.description %></p>
+  <section class="goal-details">
+    <p>Goal: <%= number_to_currency(@project.goal) %></p>
+    <p>Fundraising starts: <%= @project.start_date.strftime("%A %b %d %Y") %></p>
+    <p>Deadline: <%= @project.end_date.strftime("%A %b %d %Y") %></p>
+    <time>
+      <%= icon('clock-o') %>
+      <%= "#{time_ago_in_words(@project.end_date)} #{( @project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %>
+    </time>
+    <p>Total Raised To Date: <%= number_to_currency(@project.pledges.map { |pledge| pledge.dollar_amount }.sum) %></p>
 
-  <% unless current_user == @project.user %>
-    <% if !current_user || current_user.pledges.where(project_id: @project.id).empty? %>
-      <h2>Enter an amount to pledge below!</h2>
-    <% else %>
-      <h2>Hello, <%= current_user.first_name %>!</h2>
-      <p>You have already contributed to this cause. To pledge again, enter an amount below.</p>
+    <% unless current_user == @project.user %>
+      <% if !current_user || current_user.pledges.where(project_id: @project.id).empty? %>
+        <h2>Enter an amount to pledge below!</h2>
+      <% else %>
+        <h2>Hello, <%= current_user.first_name %>!</h2>
+        <p>You have already contributed to this cause. To pledge again, enter an amount below.</p>
+      <% end %>
+      <%= render '/pledges/form', pledge: @pledge %>
     <% end %>
-    <%= render '/pledges/form', pledge: @pledge %>
-  <% end %>
+  </section>
 </section>
 <hr>
 
