--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,39 +1,38 @@
-<p><%= Project.all.count %>
-  <% if Project.all.count == 1 %>
-  project has
+<section class="hero-image">
+  <p><%= Project.all.count %>
+    <% if Project.all.count == 1 %>
+    project has
   <% else %>
-  projects have
-  <% end %>
-  been started</p>
-<p><%= @successful_projects.count %>
-  <% if @successful_projects.count == 1 %>
-  project has
+    projects have
+    <% end %>
+    been started</p>
+  <p><%= @successful_projects.count %>
+    <% if @successful_projects.count == 1 %>
+    project has
   <% else %>
-  projects have
-  <% end %>
-  been funded</p>
-<p><%= project_pledges_sum(@successful_projects) %> have been pledged towards successful projects</p>
-
-
-
-
+    projects have
+    <% end %>
+    been funded</p>
+  <p><%= project_pledges_sum(@successful_projects) %>
+    have been pledged towards successful projects</p>
+</section>
 
 <p><%= link_to "New Project", new_project_path %></p>
 
 <% @projects.each do |project| %>
-  <article class="project">
-    <%= link_to project, class: 'project-link' do %>
-      <figure class="project-image">
-        <% if project.image %>
-          <%= image_tag project.image %>
-        <% else %>
-          <%= image_tag ActionController::Base.helpers.asset_path("default.jpg") %>
-        <% end %>
-      </figure>
-      <h1 class="project-title"><%= project.title %></h1>
-      <time class="project-days-left">
-        <%= icon('clock-o') %>
-        <%= "#{time_ago_in_words(project.end_date)} #{( project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
+<article class="project">
+  <%= link_to project, class: 'project-link' do %>
+  <figure class="project-image">
+    <% if project.image %>
+    <%= image_tag project.image %>
+  <% else %>
+    <%= image_tag ActionController::Base.helpers.asset_path("default.jpg") %>
     <% end %>
-  </article>
+  </figure>
+  <h1 class="project-title"><%= project.title %></h1>
+  <time class="project-days-left">
+    <%= icon('clock-o') %>
+    <%= "#{time_ago_in_words(project.end_date)} #{( project.end_date > Time.now.utc ) ? 'remaining' : 'past deadline'}" %></time>
+  <% end %>
+</article>
 <% end %>
