--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -31,29 +31,34 @@
 @media ( min-width: 1024px ) {
   .project-header {
     display: grid;
-    grid-template-columns: repeat(7, 6fr);
+    grid-template-columns: repeat(14, 6fr);
     grid-template-rows: repeat(10, 60px);
-    grid-area: 1 / 1 / 10 / 10;
     h1 {
-      grid-column: 2;
-      grid-row: 2;
+      grid-column: 3 / 5;
+      grid-row: 1;
       display: block;
     }
     h4 {
-      grid-column: 1;
-      grid-row: 2;
+      grid-column: 1 / 3;
+      grid-row: 1;
     }
-    img {
-      grid-column: 2 / 5;
-      grid-row: 5 / 10;
+    div {
+      grid-column: 1 / 11;
+      grid-row: 4 /11;
+      margin: 10px;
+      background-size: cover;
     }
     .description {
-      grid-column: 2 / 6;
-      grid-row: 3;
+      grid-column: 3 / 12;
+      grid-row: 2;
     }
     .goal-details {
-      grid-column: 6 / 8;
-      grid-row: 5 / 10;
+      grid-column: 11 / 16;
+      grid-row: 4 / 10;
+    }
+    .tags {
+      grid-column: 2 / 12;
+      grid-row: 3;
     }
   }
 
