--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -33,6 +33,7 @@
     display: grid;
     grid-template-columns: repeat(14, 6fr);
     grid-template-rows: repeat(10, 60px);
+    background-color: #cfcfcf;
     h1 {
       grid-column: 3 / 5;
       grid-row: 1;
@@ -74,7 +75,15 @@
 
     .project-rewards {
       grid-column: 5 / 7;
+      max-height: 700px;
       overflow: scroll;
+      .reward {
+        text-align: center;
+        padding: 5px;
+        width: 95%;
+        margin: 15px auto;
+        box-shadow: 2px 4px 4px 2px rgba(#000000, 0.4)
+      }
     }
   }
 
