--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -45,37 +45,7 @@
 <section class="main-content">
   <section class="updates-and-comments">
     <section class="project-updates">
-      <h2>Updates</h2>
-
-        <% if @project.user == current_user %>
-        <%= link_to "Add Update", new_project_project_update_path(@project)%>
-        <% end %>
-
-        <ul>
-          <% @updates.each do |update| %>
-          <li><%= update.title %><br />
-            <%= update.description %><br />
-            Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %><br />
-            <% if current_user == @project.user %>
-            <%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %>
-            <% end %>
-          </li>
-          <% end %>
-        </ul>
-
-      <% if current_user && current_user.pledged_projects == @project && @project.goal >= @project.pledges.sum %>
-        <ul>
-          <% @pledger_updates.each do |update| %>
-            <li><%= update.title %><br />
-              <%= update.description %><br />
-              Created at <%= dateformat(update.created_at) %> | Updated at <%= dateformat(update.updated_at) %><br />
-              <% if current_user == @project.user %>
-              <%= link_to "Edit", edit_project_project_update_path(@project.id, update.id) %> | <%= link_to "Delete", project_project_update_path(@project.id, update.id), method: :delete, data: {confirm: "Are you sure?"} %>
-              <% end %>
-            </li>
-          <% end %>
-        </ul>
-      <% end %>
+      <%= render 'project_updates/updates' %>
     </section>
 
     <section class="project-comments">
@@ -119,35 +89,8 @@
   </section>
 
     <section class="project-rewards">
-      <h2>Rewards</h2>
-      <% @rewards.each do |reward| %>
       <div class="reward">
-        <p>Pledge <%= number_to_currency(reward.dollar_amount) %></p>
-        <p><%= reward.description %></p>
-        <%= form_tag(claim_project_reward_path(@project, reward), method: "patch") do %>
-          <%= submit_tag("Pledge and Claim this Reward") %>
-        <% end %>
-        <p>Claimed: <%= reward.claimed %>
-        <% if reward.limit %>
-          | Total available: <%= reward.limit %></p>
-        <% else %>
-          | No limits have been set for this reward.</p>
-        <% end %>
-
-        <p>
-          <small>
-            <% if current_user == @project.user %>
-            <%= link_to "Remove reward", project_reward_path(@project, reward), method: 'delete' %>
-            <% end %>
-          </small>
-        </p>
-        <p>-----------</p>
-      </div>
-      <% end %>
-
-      <% if current_user == @project.user %>
-      <%= link_to "Add new reward", new_project_reward_path(@project) %>
-      <% end %>
+        <%= render "rewards/rewards" %>
     </section>
   </section>
 
@@ -158,4 +101,4 @@
     <li><%= user.first_name %> <%= user.last_name %></li>
     <% end %>
   </ul>
-<% end %>
+  <% end %>
